--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ go:
   - 1.7
   - tip
 
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
